# snippets

./: .gitignore  README.md  list.h
algo+struct/: materials.md
bash/: rsync-box.sh
boost/: ScopedPtrSample  ScopedPtrSample.cc
c/: bytes.h  coro-lwan-coro-example.c  endian-test.c
ceph/: ceph-deploy-cluster.sh  ceph-osdop-write-size-too-big.cc  ceph-pg-split.cc  ceph-rbdloc.sh  ceph-remove-osd.sh  radosput.cc
cexception/: README.md
coroutine/: lwan-coro.c  lwan-coro.h  qemu-coro-example.c  ucontext-example.c
cpp-bigint/: Makefile  biguint-inl.h  biguint.h  testsuite.cc
cpp-misc/: debug_helper.cc  endian.c  ip-str-int.c
cpp-string/: str_line_iterator.cc  strtokenizer.hpp
devenv/: config.fish  e  tmux.conf  vimrc  x  ycm_extra_conf.py
dotfiles/: keyd.conf  vimrc.ubuntu
ebs/: reliability-calc.py
erlang-misc/: Makefile.template.detailed
erlang-snippets/: Makefile.template.simplified  README.md  process-spawn-time.erl  stimer.erl
examples/: regex.c
hash/: bloom-filter.c  consistent-hashring.cc
java-logback/: LoggerTest.java  logback.xml
leveldb/: basic_op  basic_op.cc
libconsensus/: CMakeLists.txt
libev/: hello-world.cc
libevent/: hello-world.c  signal-test.c  time-test.c
linux-device/: get-device-blocks.c  get-sector-size.c  inp.c  read-all-the-ports.c
linux-io/: aio.c  bio-write.c  close-on-exec.c  dio-read.c  dio-write.c  rename-with-xattr.c
linux-mm/: memalign-munmap.c  mmap-kernel-side.c  mmap-readfile.c  mmap-user-side.c  print-proc-maps.c  process-addr-layout.c  (+4 more)
try-consensus/src/: CMakeLists.txt  test_paxos.cc  util.cc
(+154 files in other folders)
